hice los menus y rutas de las materias de 5to año de informatica

--- a/templates/index/indexin5to.html
+++ b/templates/index/indexin5to.html
@@ -36,28 +36,28 @@
              <br>
      <div class="bloque-superpuesto">
         <img src="/static/utils/img/materia1.png" alt="Materias" class="4to">
-        <a href="/CET4/templates/index/indexlbssop.html" class="texto-superpuesto"> lab de sistemas opretativos </a>
+        <a href="/informatica/5toinformatica/labso" class="texto-superpuesto"> lab de sistemas opretativos </a>
       </div>
      <div class="bloque-superpuesto">
         <img src="/static/utils/img/materia1.png" alt="Materias" class="materia1">
-        <a  href="/templates/index/indexlbhardw.html" class="texto-superpuesto">lab de hardware</a>
+        <a  href="/informatica/5toinformatica/labhard" class="texto-superpuesto">lab de hardware</a>
      </div>
      <div class="bloque-superpuesto">
         <img src="/static/utils/img/materia1.png" alt="Materias" class="materia1">
-        <a href="/templates/index/indexlbprog.html" class="texto-superpuesto">lab de programacion </a>
+        <a href="/informatica/5toinformatica/labprog" class="texto-superpuesto">lab de programacion </a>
      </div>
      <br>
      <div class="bloque-superpuesto">
         <img src="/static/utils/img/materia1.png" alt="Materias" class="materia2">
-        <a href="/templates/index/indexlbssdig.html" class="texto-superpuesto">sistemas digitales </a>
+        <a href="/informatica/5toinformatica/sistdig" class="texto-superpuesto">sistemas digitales </a>
      </div>
         <div class="bloque-superpuesto">
         <img src="/static/utils/img/materia1.png" alt="Materias" class="materia2">
-        <a href="/templates/index/indexlbtelein.html" class="texto-superpuesto">teleinform </a>
+        <a href="/informatica/5toinformatica/teleinf" class="texto-superpuesto">teleinformatica </a>
     </div>
      <div class="bloque-superpuesto">
         <img src="/static/utils/img/materia1.png" alt="Materias" class="materia2">
-        <a href="/templates/index/indexdiseñowb.html" class="texto-superpuesto">diseñoweb </a>
+        <a href="/informatica/5toinformatica/labapss" class="texto-superpuesto">lab de aplicaciones </a>
      </div>
 
     <div class="footer">  
