--- a/templates/index/indexhomeoinicio.html
+++ b/templates/index/indexhomeoinicio.html
@@ -7,8 +7,16 @@
     <title>Home</title>
 </head>
 <body>
-    <div id="toggle">
+    <div class="header">
+            <div id="toggle">
         <span>&#9776;</span> <!--El simbolo de Tres barras-->
+    </div>
+        <form class="buscador-logo">
+            <div class="buscador-logo2">
+            <img src="/static/utils/img/busqueda-de-lupa.png" alt="ErrorLogo" class="logo">
+            <input class="buscador" placeholder=" Preguntas..." type="text"> 
+            </div>
+        </form>
     </div>
     <!--Todo la barra lateral-->
     <div class="elcostado ordenado">
@@ -23,19 +31,13 @@
         <a href="#"><img src="/static/utils/img/opciones-img5.png" alt="Configuracion" class="opcion5"></a>
     </div>
     <!--Fin de la barra lateral-->
-     <div class="header">
-        <form class="buscador-logo">
-            <div class="buscador-logo2">
-            <img src="/static/utils/img/busqueda-de-lupa.png" alt="ErrorLogo" class="logo">
-            <input class="buscador" placeholder=" Preguntas..." type="text"> 
-            </div>
-        </form>
-    </div>
     <div class="cuerpo1">
              <br>
     <div class="bloque-superpuesto">
-        <img src="/static/utils/img/materia1.png" alt="Materias" class="materia1">
+        <a href=' /programacion'>
         <a href='/programacion' class="texto-superpuesto">programacion</a> 
+        <img src="/static/utils/img/materia1.png" alt="Materias" class="materia1">
+        </a>
     </div>
     <div class="bloque-superpuesto">
         <img src="/static/utils/img/materia1.png" alt="Materias" class="materia1">
