--- a/static/css/dprogramacion.css
+++ b/static/css/dprogramacion.css
@@ -142,13 +142,22 @@ body {
 
 /* Texto sobre imagen */
 .texto-superpuesto {
-   position: absolute;
-   top: 45%;
-   left: 45%;
-   transform: traslate(-45%, -45%);
-   font-size: 20px;
-   font-weight: bold;
-    /*pointer-events: none;  El texto no bloquea clics */
+  position: absolute;   /*hace que el enlace se posicione encima del .bloque-superpuesto.*/
+  top: 0;/* el <a> ocupa toda el área de la imagen, convirtiéndola en clickeable.*/
+  left: 0;/* el <a> ocupa toda el área de la imagen, convirtiéndola en clickeable.*/
+  width: 100%;/* el <a> ocupa toda el área de la imagen, convirtiéndola en clickeable.*/
+  height: 100%; /* el <a> ocupa toda el área de la imagen, convirtiéndola en clickeable.*/
+  z-index: 2; /*  asegura que el texto esté encima de la imagen.*/
+  background-color: rgba(0, 0, 0, 0); /* fondo transparente */
+  color: white;
+  padding-top:25%;
+  font-size: 30px;
+  text-decoration: none;
+  cursor: pointer;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
 }
 
 #toggle{
