--- a/templates/index/dprogramacionindex.html
+++ b/templates/index/dprogramacionindex.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/static/css/dprogramacion.css">
+    <link rel="stylesheet" href="/static/css/barralateral.css"/>
+
     <title>dprogramacion</title>
 </head>
 <body>
