--- a/templates/index/indexin6to.html
+++ b/templates/index/indexin6to.html
@@ -8,7 +8,9 @@
     <title>6to informatica</title>
 </head>
 <body>
- 
+ <div id="toggle">
+        <span>&#9776;</span> <!--El simbolo de Tres barras-->
+    </div>
     <!--Todo la barra lateral-->
     <div class="elcostado ordenado">
         <div id="out">
@@ -34,14 +36,14 @@
              <br>
      <div class="bloque-superpuesto">
         <img src="/static/utils/img/materia1.png" alt="Materias" class="4to">
-        <a href="/templates/index/indexlbprog.html" class="texto-superpuesto"> lab de programacion/a>
+        <a href="/templates/index/indexlbprog.html" class="texto-superpuesto"> lab de programacion </a>
      </div>
        <div class="bloque-superpuesto">
-        <img src="/static/utils/img/materia1.png" alt="Materias" class="materia1">
+        <img src="/static/utils/img/materia1.png" alt="Materias" class="4to">
         <a  href="/templates/index/indexlbapli.html" class="texto-superpuesto">lab de aplicaciones</a>
      </div>
      <div class="bloque-superpuesto">
-        <img src="/static/utils/img/materia1.png" alt="Materias" class="materia1">
+        <img src="/static/utils/img/materia1.png" alt="Materias" class="4to">
         <a href="/templates/index/indexlbhardw.html" class="texto-superpuesto">lab de hardware</a>
      </div>
      <br>
@@ -58,7 +60,7 @@
         <img src="/static/utils/img/materia1.png" alt="Materias" class="materia2">
         <a href="/templates/index/indexsegurinform.html" class="texto-superpuesto">segur.inform </a>
      </div>
-    <div>
+   </div>
     <div class="footer">  
     </div>
     
