cree los html para 7mo informatica y las rutas para que funcionen los otones

--- a/templates/index/indexin7mo.html
+++ b/templates/index/indexin7mo.html
@@ -36,24 +36,39 @@
              <br>
     <div class="bloque-superpuesto">
         <img src="/static/utils/img/materia1.png" alt="Materias" class="4to">
-        <a href="/templates/index/indexproyss.html" class="texto-superpuesto"> proyecto sist  </a>
+        <a href="/informatica/7toinformatica/proysis" class="texto-superpuesto"> proyecto sist  </a>
     </div>
     <div class="bloque-superpuesto">
         <img src="/static/utils/img/materia1.png" alt="Materias" class="materia1">
-        <a  href="/templates/index/indeximryrds.html" class="texto-superpuesto">imyr redes</a>
+        <a  href="/informatica/7toinformatica/imyrredes" class="texto-superpuesto">imyr redes</a>
     </div>
     <div class="bloque-superpuesto">
         <img src="/static/utils/img/materia1.png" alt="Materias" class="materia1">
-        <a href="/templates/index/indexmodeloss.html" class="texto-superpuesto">modelos y sistemas</a>
+        <a href="/informatica/7toinformatica/modysis" class="texto-superpuesto">modelos y sistemas</a>
     </div>
     <br>
     <div class="bloque-superpuesto">
         <img src="/static/utils/img/materia1.png" alt="Materias" class="materia2">
-        <a href="/templates/index/indexlbbd.html" class="texto-superpuesto">base de datos  </a>
+        <a href="/informatica/7toinformatica/basedatos" class="texto-superpuesto">base de datos  </a>
     </div>
         <div class="bloque-superpuesto">
         <img src="/static/utils/img/materia1.png" alt="Materias" class="materia2">
-        <a href="/templates/index/indexem" class="texto-superpuesto">empr.prod y di</a>
+        <a href="/informatica/7toinformatica/empproddl" class="texto-superpuesto">empr.prod y dl</a>
+    </div>
+    </div>
+        <div class="bloque-superpuesto">
+        <img src="/static/utils/img/materia1.png" alt="Materias" class="materia2">
+        <a href="/informatica/7toinformatica/imyrsis" class="texto-superpuesto">imir sistemas</a>
+    </div>
+    </div>
+        <div class="bloque-superpuesto">
+        <img src="/static/utils/img/materia1.png" alt="Materias" class="materia2">
+        <a href="/informatica/7toinformatica/practprof" class="texto-superpuesto">practica profesional</a>
+    </div>
+    </div>
+        <div class="bloque-superpuesto">
+        <img src="/static/utils/img/materia1.png" alt="Materias" class="materia2">
+        <a href="/informatica/7toinformatica/evalproy" class="texto-superpuesto">evaluacion proyectos</a>
     </div>
    
     <div class="footer">  
