agregue la barra funcional a todas las materias de 4to de programacion, y a la principal de programacion

--- a/templates/index/indexdcuarto.html
+++ b/templates/index/indexdcuarto.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/static/css/d4to.css">
+    <link rel="stylesheet" href="/static/css/barralateral.css"/>
     <title>programacion  y programacion cuarto</title>
 </head>
 <body>
@@ -61,6 +62,6 @@
     <div class="footer">  
     </div>
     
-
+<script src="/static/js/barralateral.js"></script>
 </body>
 </html>
