--- a/templates/index/indexepydl.html
+++ b/templates/index/indexepydl.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Comentarios con Menú</title>
   <link rel="stylesheet" href="/static/css/indexcajacomentario.css" />
+  <link rel="stylesheet" href="/static/css/barralateral.css"/>
 </head>
 <body>
    <!--Todo la barra lateral-->
