--- a/templates/index/indexlbapli.html
+++ b/templates/index/indexlbapli.html
@@ -5,15 +5,19 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Comentarios con Menú</title>
   <link rel="stylesheet" href="/static/css/indexcajacomentario.css" />
+  <link rel="stylesheet" href="/static/css/barralateral.css"/>
 </head>
 <body>
+    <div id="toggle">
+        <span>&#9776;</span> <!--El simbolo de Tres barras-->
+    </div>
   <!--Todo la barra lateral-->
     <div class="elcostado ordenado">
         <div id="out">
             <span>&#9587;</span> <!--El simbolo de la X-->
         </div>
         <a href="/templates/index/indexusuario.html"><img src="/static/utils/img/usuario.png" alt="Perfil" class="usuario"></a>
-        <a href="/templates/index/indexhomeoinicio.html"><img src="/static/utils/img/casa-img1.png" alt="Inicio" class="casa1"></a>
+        <a href="/indexhomeoinicio"><img src="/static/utils/img/casa-img1.png" alt="Inicio" class="casa1"></a>
         <a href="/templates/index/indexnotificaciones.html"><img src="/static/utils/img/campana-img2.png" alt="Notificaciones" class="campana2"></a>
         <a href="/templates/index/indexcentralayuda.html"><img src="/static/utils/img/pregunta-img3.png" alt="Soporte" class="soporte3"></a>
         <a href="#"><img src="/static/utils/img/grupo-img4.png" alt="" class="grupo4"></a>
@@ -38,3 +42,4 @@
       <div id="commentsSection"></div>
   </main>
 <script src="/static/js/comentarios.js"></script>
+<script src="/static/js/barralateral.js"></script>
