--- a/templates/index/indexsexto.html
+++ b/templates/index/indexsexto.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/static/css/d6to.css">
+    <link rel="stylesheet" href="/static/css/barralateral.css"/>
     <title>programacion sexto</title>
 </head>
 <body>
@@ -60,6 +61,6 @@
     <div class="footer">  
     </div>
     
-
+<script src="/static/js/barralateral.js"></script>
 </body>
 </html>
