le agregue la barra funcional del menu a todos los cursos y materias de programacion

--- a/templates/index/indexempr.html
+++ b/templates/index/indexempr.html
@@ -8,6 +8,9 @@
   <link rel="stylesheet" href="/static/css/barralateral.css"/>
 </head>
 <body>
+  <div id="toggle">
+        <span>&#9776;</span> <!--El simbolo de Tres barras-->
+    </div>
   <nav class="elcostado ordenado">
     <div id="out">
       <button aria-label="Cerrar   sesión">&#9587;</button>
@@ -40,3 +43,6 @@
       <div id="commentsSection"></div>
   </main>
 <script src="/static/js/comentarios.js"></script>
+<script src="/static/js/barralateral.js"></script>
+</body>
+</html>
