--- a/templates/index/indexlbproc.html
+++ b/templates/index/indexlbproc.html
@@ -5,8 +5,12 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Comentarios con Menú</title>
   <link rel="stylesheet" href="/static/css/indexcajacomentario.css" />
+  <link rel="stylesheet" href="/static/css/barralateral.css"/>
 </head>
 <body>
+  <div id="toggle">
+        <span>&#9776;</span> <!--El simbolo de Tres barras-->
+    </div>
  <!--Todo la barra lateral-->
     <div class="elcostado ordenado">
         <div id="out">
@@ -39,3 +43,6 @@
       <div id="commentsSection"></div>
   </main>
 <script src="/static/js/comentarios.js"></script>
+<script src="/static/js/barralateral.js"></script>
+</body>
+</html>
