--- a/templates/index/indexsexto.html
+++ b/templates/index/indexsexto.html
@@ -8,6 +8,9 @@
     <title>programacion sexto</title>
 </head>
 <body>
+    <div id="toggle">
+        <span>&#9776;</span> <!--El simbolo de Tres barras-->
+    </div>
       <!--Todo la barra lateral-->
     <div class="elcostado ordenado">
         <div id="out">
@@ -52,7 +55,7 @@
     </div>
      <div class="bloque-superpuesto">
         <img src="/static/utils/img/materia1.png" alt="Materias" class="materia1">
-        <a href="/programacion/6toprogramacion/LabSistemasDigitales" class="texto-superpuesto">sistemas de gestion  </a>
+        <a href='/programacion/6toprogramacion/LabSistemaGestion' class="texto-superpuesto">sistemas de gestion  </a>
     </div>
      <div class="bloque-superpuesto">
         <img src="/static/utils/img/materia1.png" alt="Materias" class="materia1">
