--- a/templates/index/indexssdgestn.html
+++ b/templates/index/indexssdgestn.html
@@ -5,8 +5,12 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Comentarios con Menú</title>
   <link rel="stylesheet" href="/static/css/indexcajacomentario.css" />
+  <link rel="stylesheet" href="/static/css/barralateral.css"/>
 </head>
 <body>
+  <div id="toggle">
+        <span>&#9776;</span> <!--El simbolo de Tres barras-->
+    </div>
   <!--Todo la barra lateral-->
     <div class="elcostado ordenado">
         <div id="out">
@@ -33,3 +37,6 @@
         <label for="comentario" class="sr-only">Escribe tu comentario</label>
         <textarea id="comentario" name="comentario" placeholder="Escribe tu comentario..." required></textarea>
         <div>
+<script src="/static/js/barralateral.js"></script>
+</body>
+</html>
