cree los html de evaluacion de proyectos, practica profesional, los enrute en python y cree sus botones. modifique los titulos de todas las materias de 7mo pq estaban mal

--- a/templates/index/indexdseptimo.html
+++ b/templates/index/indexdseptimo.html
@@ -24,46 +24,54 @@
         <a href="#"><img src="/static/utils/img/opciones-img5.png" alt="Configuracion" class="opcion5"></a>
     </div>
     <!--Fin de la barra lateral-->
-     <div class="header">
-        <form class="buscador-logo">
-            <div class="buscador-logo2">
-            <img src="/static/utils/img/busqueda-de-lupa.png" alt="ErrorLogo" class="logo">
+        <div class="header">
+            <form class="buscador-logo">
+                <div class="buscador-logo2">
+                    <img src="/static/utils/img/busqueda-de-lupa.png" alt="ErrorLogo" class="logo">
 
-            <input class="buscador" placeholder=" Preguntas..." type="text"> 
-            </div>
-        </form>
-    </div>
-    <div class="cuerpo1">
+                    <input class="buscador" placeholder=" Preguntas..." type="text"> 
+                </div>
+            </form>
+        </div>
+        <div class="cuerpo1">
              <br>
 
-    <div class="bloque-superpuesto">
-        <img src="/static/utils/img/materia1.png" alt="Materias" class="4to">
-        <a href='/programacion/7moprogramacion/PytoSistWd' class="texto-superpuesto">Proy I SIST WD  </a>
-    </div>
+        <div class="bloque-superpuesto">
+            <img src="/static/utils/img/materia1.png" alt="Materias" class="4to">
+            <a href='/programacion/7moprogramacion/PytoSistWd' class="texto-superpuesto">Proy I SIST WD  </a>
+        </div>
 
-    <div class="bloque-superpuesto">
-        <img src="/static/utils/img/materia1.png" alt="Materias" class="materia1">
-        <a href='/programacion/7moprogramacion/PdSoftPMov' class="texto-superpuesto">PD SOFT P MOD </a> 
-     </div>
+        <div class="bloque-superpuesto">
+            <img src="/static/utils/img/materia1.png" alt="Materias" class="materia1">
+            <a href='/programacion/7moprogramacion/PdSoftPMov' class="texto-superpuesto">PD SOFT P MOV </a> 
+        </div>
 
-    <div class="bloque-superpuesto">
-        <img src="/static/utils/img/materia1.png" alt="Materias" class="materia1">
-        <a href='/programacion/7moprogramacion/ModSistemas' class="texto-superpuesto">MOD. Y SIST </a>
-    </div>
+        <div class="bloque-superpuesto">
+            <img src="/static/utils/img/materia1.png" alt="Materias" class="materia1">
+            <a href='/programacion/7moprogramacion/ModSistemas' class="texto-superpuesto">MOD. Y SIST </a>
+        </div>
 
-    <br>
-    <div class="bloque-superpuesto">
-        <img src="/static/utils/img/materia1.png" alt="Materias" class="materia2">
-        <a href='/programacion/7moprogramacion/PdiSistComp' class="texto-superpuesto">PDI SIST COMP </a>
-    </div>
+        <br>
+        <div class="bloque-superpuesto">
+            <img src="/static/utils/img/materia1.png" alt="Materias" class="materia2">
+            <a href='/programacion/7moprogramacion/PdiSistComp' class="texto-superpuesto">PDI SIST COMP </a>
+        </div>
        <div class="bloque-superpuesto">
-        <img src="/static/utils/img/materia1.png" alt="Materias" class="materia2">
-        <a href='/programacion/7moprogramacion/EmprProdDl' class="texto-superpuesto"> EMP.PROD Y DL </a>
-    </div>
-          <div class="bloque-superpuesto">
-        <img src="/static/utils/img/materia1.png" alt="Materias" class="materia2">
-        <a href='/programacion/7moprogramacion/OrgMetodos' class="texto-superpuesto"> org metodos </a>
-    </div>
+            <img src="/static/utils/img/materia1.png" alt="Materias" class="materia2">
+            <a href='/programacion/7moprogramacion/EmprProdDl' class="texto-superpuesto"> EMP.PROD Y DL </a>
+        </div>
+        <div class="bloque-superpuesto">
+            <img src="/static/utils/img/materia1.png" alt="Materias" class="materia2">
+            <a href='/programacion/7moprogramacion/OrgMetodos' class="texto-superpuesto"> org metodos </a>
+        </div>
+        <div class="bloque-superpuesto">
+            <img src="/static/utils/img/materia1.png" alt="Materias" class="materia2">
+            <a href='/programacion/7moprogramacion/PractProf' class="texto-superpuesto"> Pratica profesional </a>
+        </div>
+        <div class="bloque-superpuesto">
+            <img src="/static/utils/img/materia1.png" alt="Materias" class="materia2">
+            <a href='/programacion/7moprogramacion/EvalPytos' class="texto-superpuesto"> evaluacion proyectos </a>
+        </div>
     </div>
 
     <div class="footer">  
