--- a/templates/index/indexpractprof.html
+++ b/templates/index/indexpractprof.html
@@ -11,7 +11,7 @@
   <div id="toggle">
         <span>&#9776;</span> <!--El simbolo de Tres barras-->
     </div>
- <!--Todo la barra lateral-->
+   <!--Todo la barra lateral-->
     <div class="elcostado ordenado">
         <div id="out">
             <span>&#9587;</span> <!--El simbolo de la X-->
@@ -24,11 +24,10 @@
         <a href="#"><img src="/static/utils/img/opciones-img5.png" alt="Configuracion" class="opcion5"></a>
     </div>
     <!--Fin de la barra lateral-->
-
   <main class="comentarios">
     <header class="comentarios-header">
       <span class="flechas" aria-hidden="true">▶▶▶▶▶▶▶▶▶▶▶▶▶▶▶▶▶▶▶▶</span>
-      <h1>procesos industriales</h1>
+      <h1>Practica Profesional </h1>
       <span class="flechas" aria-hidden="true">◀◀◀◀◀◀◀◀◀◀◀◀◀◀◀◀◀◀◀◀</span>
     </header>
 
