--- a/templates/index/labdis5prog.html
+++ b/templates/index/labdis5prog.html
@@ -8,10 +8,10 @@
   <link rel="stylesheet" href="/static/css/barralateral.css"/>
 </head>
 <body>
-  <div id="toggle">
+    <div id="toggle">
         <span>&#9776;</span> <!--El simbolo de Tres barras-->
     </div>
- <!--Todo la barra lateral-->
+  <!--Todo la barra lateral-->
     <div class="elcostado ordenado">
         <div id="out">
             <span>&#9587;</span> <!--El simbolo de la X-->
@@ -28,7 +28,7 @@
   <main class="comentarios">
     <header class="comentarios-header">
       <span class="flechas" aria-hidden="true">▶▶▶▶▶▶▶▶▶▶▶▶▶▶▶▶▶▶▶▶</span>
-      <h1>procesos industriales</h1>
+      <h1>lab diseño web</h1>
       <span class="flechas" aria-hidden="true">◀◀◀◀◀◀◀◀◀◀◀◀◀◀◀◀◀◀◀◀</span>
     </header>
 
@@ -39,10 +39,7 @@
         <input type="hidden" id="id_mat" name="id_mat" value="{{ id_mat }}">
         <button type="submit">Enviar</button>
       </form>
-
       <div id="commentsSection"></div>
   </main>
 <script src="/static/js/comentarios.js"></script>
 <script src="/static/js/barralateral.js"></script>
-</body>
-</html>
