--- a/templates/index/indexmodeloss.html
+++ b/templates/index/indexmodeloss.html
@@ -28,7 +28,7 @@
   <main class="comentarios">
     <header class="comentarios-header">
       <span class="flechas" aria-hidden="true">▶▶▶▶▶▶▶▶▶▶▶▶▶▶▶▶▶▶▶▶</span>
-      <h1>teleinform </h1>
+      <h1>modelos y sistemas </h1>
       <span class="flechas" aria-hidden="true">◀◀◀◀◀◀◀◀◀◀◀◀◀◀◀◀◀◀◀◀</span>
     </header>
 
