--- a/templates/index/indexsegurinform.html
+++ b/templates/index/indexsegurinform.html
@@ -28,7 +28,7 @@
   <main class="comentarios">
     <header class="comentarios-header">
       <span class="flechas" aria-hidden="true">▶▶▶▶▶▶▶▶▶▶▶▶▶▶▶▶▶▶▶▶</span>
-      <h1>lab de base de datos </h1>
+      <h1>Seguridad informatica </h1>
       <span class="flechas" aria-hidden="true">◀◀◀◀◀◀◀◀◀◀◀◀◀◀◀◀◀◀◀◀</span>
     </header>
 
