--- a/templates/index/indexiniciarsesion.html
+++ b/templates/index/indexiniciarsesion.html
@@ -22,6 +22,9 @@
         <div class="links">
           <a href="#">¿OLVIDÓ SU CONTRASEÑA? RECUPERAR</a>
         </div>
+                <div class="links">
+          <a href="#">Entrar como invitado</a>
+        </div>
 
         <button type="submit" id="init">INICIAR</button>
         <div id="mensaje" class="mensaje"></div>
