--- a/static/css/style_principal.css
+++ b/static/css/style_principal.css
@@ -83,8 +83,9 @@ body {
  gap: 20px;
  justify-content: center;
  left: 30px;
- margin-top: 30px;
+ margin-top: -5px;
  margin-left: 30px;
+ margin-bottom: 20px;
 }
 
 .boton {
@@ -96,6 +97,7 @@ body {
   font-weight: bold;
   border: 2px solid white;
   transition: all 0.3s ease;
+  
 }
 
 .boton:hover {
