descargue imaaagenes y cambie algunas fuentes de los titulos

--- a/static/css/dinformatica.css
+++ b/static/css/dinformatica.css
@@ -11,6 +11,9 @@ body {
     background-color: #0c1b32;
     color: white;
 }
+h1{
+  font-family: Arial, Helvetica, sans-serif;
+}
 
 /* empieza la bARra de busqueda  */
 ::placeholder {
