--- a/static/css/indexcajacomentario.css
+++ b/static/css/indexcajacomentario.css
@@ -7,6 +7,9 @@
 body {
   background-color: #082c54;
 }
+h1 {
+  font-family: Arial, Helvetica, sans-serif;
+}
 
 ::placeholder {
   color: #fff;
@@ -270,5 +273,3 @@ button:hover {
   color:rgb(245, 245, 245);
 
 }
-
-
