--- a/templates/index/indexlbssop.html
+++ b/templates/index/indexlbssop.html
@@ -27,7 +27,7 @@
 
   <main class="comentarios">
     <header class="comentarios-header">
-      <span class="flechas" aria-hidden="true">▶▶▶▶▶▶▶▶▶▶▶▶▶▶▶▶▶▶▶▶</span>
+      <img src="/static/utils/img/sistema-operativo-windows-e1592788622900.jpg" alt="Laboratorio de Sistemas Operativos" class="img">
       <h1>lab de sistemas operativos</h1>
       <span class="flechas" aria-hidden="true">◀◀◀◀◀◀◀◀◀◀◀◀◀◀◀◀◀◀◀◀</span>
     </header>
