--- a/templates/index/indexiniciarsesion.html
+++ b/templates/index/indexiniciarsesion.html
@@ -7,6 +7,14 @@
   <link rel="stylesheet" href="/static/css/estiloiniciarsesion.css"/>
 </head>
 <body>
+
+
+    <video autoplay muted loop id="videoFondo">
+  <source src="/static/utils/img/fondo_iniciar_sesion.mp4" type="video/mp4" />
+  </video>
+
+
+   <div class="contenido">
   <main class="main-wrapper">
     
     <section class="login-container" aria-labelledby="login-title">
@@ -36,11 +44,12 @@
     </section>
 
     <aside class="mascota-wrapper" aria-label="Asistente virtual">
-      <div class="burbuja" role="note">¿Listo para estudiar cámara?</div>
+      <div class="burbuja" role="note">¿Listo para estudiar cámarada?</div>
       <img src="/static/utils/img/zettino_sinfondo.png" alt="Mascota CETA saludando" class="mascota" />
     </aside>
 
   </main>
+  </div>
 <script src="/static/js/iniciosesion.js"></script>
 
 </body>
