Corregi el titulo de la pagina, agregue la ruta en inicio para que te lleve a comunicate con nosotros

--- a/templates/index/indexprincipal.html
+++ b/templates/index/indexprincipal.html
@@ -15,7 +15,7 @@
     <!-- aca esta el coso de la pagina el coso de arriba ahhh no me acuerdo como se dice perdón :( -->
     <div class="logo"> <img src="/static/utils/img/logo2.png" alt="imagen de el logo"> </div>
 
-    <div class="contacto"> <a href="#" class="contacto">COMUNICATE CON NOSOTROS</a></div> 
+    <div class="contacto"> <a href="/comunicatenosotros" class="contacto">COMUNICATE CON NOSOTROS</a></div> 
    
   </header>
 
