--- a/templates/index/indexcrearcuenta.html
+++ b/templates/index/indexcrearcuenta.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>crear cuenta cet4</title>
+    <title>Crear Cuenta - CET4</title>
     <link rel="stylesheet" href="/static/css/estilocrearcuenta.css">
 </head>
 <body>
