--- a/templates/index/indexiniciarsesion.html
+++ b/templates/index/indexiniciarsesion.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Inicio de Sesión - CETA</title>
+  <title>Inicio de Sesión - CET4</title>
   <link rel="stylesheet" href="/static/css/estiloiniciarsesion.css"/>
 </head>
 <body>
