Cambie la posicion de los botones de la pagina principal y quite los <br> del archivo js "comentarios"

--- a/templates/index/indexprincipal.html
+++ b/templates/index/indexprincipal.html
@@ -5,8 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title> C.E.T.4</title>
   <link rel="stylesheet" href="/static/css/style_principal.css">
-<link rel="stylesheet" href="{{ url_for('static', filename='estilos.css') }}">
-
+  <link rel="stylesheet" href="{{ url_for('static', filename='estilos.css') }}">
 </head>
 <body>
    
@@ -32,7 +31,7 @@
     <div class="coso-blanco">  
 <!-- puse tdo lo de el coso blanco  -->
       <h1><strong>C.E.T.4</strong></h1>
-      <h2>Comunidad educativa técnica</h2>
+      <h2>Comunidad Educativa Técnica4</h2>
       <p>
         Creada por y para estudiantes técnicos, donde el objetivo principal es ayudarnos entre nosotros a resolver dudas, compartir conocimientos y superar juntos los desafíos de las materias de la escuela técnica.
       </p>
