--- a/static/css/estiloiniciarsesion.css
+++ b/static/css/estiloiniciarsesion.css
@@ -100,7 +100,7 @@ body {
 .login-container .links {
   text-align: center;
    flex-wrap: wrap;
-  gap: 40px;
+  gap: 40px;   /*separacion vetical*/
   margin-top: 12px;
   font-size: 13px;
 }
